[gd_scene load_steps=2 format=3 uid="uid://yl4hs2q8887o"]

[ext_resource type="Script" uid="uid://ddiygtpr37vpx" path="res://Scripts/Display/console_display.gd" id="1_lxe66"]

[node name="ConsoleDisplay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxe66")

[node name="ConsoleLogs" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 3
scroll_following = true

[node name="ComandLine" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "> Input console command"
caret_blink = true

[connection signal="text_submitted" from="ComandLine" to="." method="_on_comand_line_text_submitted"]
